--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-Lesson 1 - Intro to Python
+# Lesson 1 - Intro to Python
 Lesson 2 - Variables
 Lesson 3 - Getting User Input
 Lesson 4 - Data Structures
