--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,14 @@ Lesson 13 - Additional Functions
 Lesson 14 - Extra Features
 Lesson 15 - Bonus Recursion
 Additional Questions
-Exercises
 Exercises/hw1.py
 Exercises/hw2.py
 Exercises/hw3.py
 Exercises/hw4.py
+Exercises/miniEx1.md
+Exercises/miniEx2.md
+Exercises/miniEx3.md
+Exercises/miniEx4.md
+Exercises/miniEx5.md
+Exercises/miniEx6.md
 Videos
