--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,6 @@ Exercises/hw1.py
 Exercises/hw2.py
 Exercises/hw3.py
 Exercises/hw4.py
-Exercises/miniEx1.md
 Exercises/miniEx2.md
 Exercises/miniEx3.md
 Exercises/miniEx4.md
@@ -24,3 +23,4 @@ Exercises/miniEx5.md
 Exercises/miniEx6.md
 Videos
 Videos.zip
+MiniEX.txt
