--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@ Lesson 12 - OOP Part 2
 Lesson 13 - Additional Functions
 Lesson 14 - Extra Features
 Lesson 15 - Bonus Recursion
-Additional Questions
-
+Additional Questions/4inarow
+Additional Questions/Extra_question
 Videos
 Videos.zip
 MiniEX.txt
